--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   intl: 0.15.7
   flutter_range_slider: ^1.1.0
   sliding_up_panel: ^0.3.0
+  simple_logger: ^1.4.1
 
 dev_dependencies:
   flutter_test:
