--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  requests: ^1.0.0
   photo_view: 0.2.2
   zoomable_image: ^1.3.1
   image_picker: ^0.4.0
-  shared_preferences: ^0.4.2
+  shared_preferences: ^0.5.0
   localstorage: ^1.2.0
   intl: 0.15.7
   flutter_range_slider: ^1.1.0
   sliding_up_panel: ^0.3.0
-  simple_logger: ^1.4.1
+  parse_server_sdk: ^1.0.20
 
 dev_dependencies:
   flutter_test:
