--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,13 +26,14 @@ dependencies:
   requests: ^1.0.0
   photo_view: 0.5.0
   zoomable_image: ^1.3.1
-  image_picker: ^0.4.0
+  image_picker: ^0.6.1
   shared_preferences: ^0.4.2
   localstorage: ^1.2.0
   intl: 0.15.7
   flutter_range_slider: ^1.1.0
   sliding_up_panel: ^0.3.0
   simple_logger: ^1.4.1
+  dio: 3.0.2
 
 dev_dependencies:
   flutter_test:
