Added better docker.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,4 +10,6 @@ RUN pip install -r requirements.txt
 
 EXPOSE 5000:5000
 
-CMD ["python", "main.py", "--db", "/res/chaos-db.db", "--static", "/res/static"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "wsgi.py"]
+
+#, "--db", "/res/chaos-db.db", "--static", "/res/static"]
