--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,6 +10,6 @@ RUN pip install -r requirements.txt
 
 EXPOSE 5000:5000
 
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "wsgi.py"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "wsgi:app"]
 
 #, "--db", "/res/chaos-db.db", "--static", "/res/static"]
