--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   sliding_up_panel: ^0.3.0
   simple_logger: ^1.4.1
   dio: 3.0.2
+  progress_dialog: ^1.2.0
 
 dev_dependencies:
   flutter_test:
