--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   simple_logger: ^1.4.1
   dio: 3.0.2
   progress_dialog: ^1.2.0
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.14.0+5
+#  firebase_analytics: ^5.0.2
+  cloud_firestore: ^0.11.0+2
+
+
 
 dev_dependencies:
   flutter_test:
