--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,4 +3,6 @@ Flask-SQLAlchemy >= 2.3.2
 Flask-Login >= 0.4.1
 flask-bcrypt >= 0.6.2
 Flask-Migrate >= 2.4.0
+Flask-Mail
 gunicorn
+flask-jwt-extended
