--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  requests: ^1.0.0
+  requests: ^3.3.0
   photo_view: 0.5.0
   zoomable_image: ^1.3.1
   image_picker: ^0.6.1
-  shared_preferences: ^0.4.2
+  shared_preferences: ^0.5.12
   localstorage: ^1.2.0
   intl: 0.15.7
   flutter_range_slider: ^1.1.0
@@ -35,11 +35,17 @@ dependencies:
   simple_logger: ^1.4.1
   dio: 3.0.2
   progress_dialog: ^1.2.0
+  flutter_launcher_icons: ^0.7.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
